src/validation/tests/snapshots/rusty__validation__tests__naming_validation_test__LWORD.snap
---
source: src/validation/tests/naming_validation_test.rs
expression: "& result"
---
error[E004]: LWORD can not be used as a name because it is a built-in datatype
  ┌─ <internal>:1:6
  │
1 │ TYPE LWORD : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^^ LWORD can not be used as a name because it is a built-in datatype

error[E004]: LWORD: Ambiguous datatype.
  ┌─ <internal>:1:6
  │
1 │ TYPE LWORD : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^^ LWORD: Ambiguous datatype.
